--- a/Bertha/app/src/main/res/layout/activity_home.xml
+++ b/Bertha/app/src/main/res/layout/activity_home.xml
@@ -7,4 +7,18 @@
         android:layout_height="match_parent"
         tools:context="com.hacktown.bertha.bertha.Home">
 
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="368dp"
+            android:layout_height="495dp" tools:layout_editor_absoluteY="8dp"
+            tools:layout_editor_absoluteX="8dp">
+        <Button
+                android:text="Get Help"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/gethelp"/>
+        <Button
+                android:text="Volunteer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/volunteer"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
