--- a/Bertha/app/src/main/res/layout/activity_home.xml
+++ b/Bertha/app/src/main/res/layout/activity_home.xml
@@ -9,8 +9,10 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="368dp"
-            android:layout_height="495dp" tools:layout_editor_absoluteY="8dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" tools:layout_editor_absoluteY="8dp"
             tools:layout_editor_absoluteX="8dp">
         <Button
                 android:text="Get Help"
